# ChangeLog for dev-util/mercurial
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/mercurial/ChangeLog,v 1.68 2008/05/28 19:01:53 phreak Exp $

  28 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Andrew Ross (aross) from metadata.xml (as per #139633).

*mercurial-1.0.1 (25 May 2008)

  25 May 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  +mercurial-1.0.1.ebuild:
  Version bump.

*mercurial-1.0 (25 Mar 2008)

  25 Mar 2008; Krzysiek Pawlik <nelchael@gentoo.org> +mercurial-1.0.ebuild:
  Version bump.

  21 Jan 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  mercurial-0.9.5-r1.ebuild:
  Fix dodoc, see bug #200117.

  14 Jan 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  -mercurial-0.9.3.ebuild, -mercurial-0.9.3-r1.ebuild,
  -mercurial-0.9.5.ebuild:
  Remove old versions.

  14 Jan 2008; Christoph Mende <angelos@gentoo.org>
  mercurial-0.9.5-r1.ebuild:
  Stable on amd64 wrt bug #203325

  27 Dec 2007; Brent Baude <ranger@gentoo.org> mercurial-0.9.5-r1.ebuild:
  Marking mercurial-0.9.5-r1 ppc and ppc64 stable for bug 203325

  25 Dec 2007; Raúl Porcel <armin76@gentoo.org> mercurial-0.9.5-r1.ebuild:
  alpha/ia64/sparc/x86 stable wrt #203325

  25 Dec 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  -mercurial-0.9.1-r2.ebuild, -mercurial-0.9.4.ebuild:
  Remove unneeded versions.

*mercurial-0.9.5-r1 (25 Dec 2007)

  25 Dec 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  +files/mercurial-0.9.5-hide-passwords.diff, metadata.xml,
  +mercurial-0.9.5-r1.ebuild:
  Add upstream patch to hide passwords with http://user:password@.../ URLs.

*mercurial-0.9.5 (07 Nov 2007)

  07 Nov 2007; Andrew Ross <aross@gentoo.org> +mercurial-0.9.5.ebuild:
  Version bump (bug #196713).

  07 Nov 2007; Andrew Ross <aross@gentoo.org> mercurial-0.9.1-r2.ebuild:
  Fix quoting issues caught by repoman.

  18 Oct 2007; Tom Gall <tgall@gentoo.org> mercurial-0.9.4.ebuild:
  added ~ppc64
